# Lab_Programmazione-

./: CMakeLists.txt  Cell.cpp  Cell.h  FoglioCalcolo.cpp  FoglioCalcolo.h  FormualaCell.cpp  FormualaCell.h  Observer.cpp  Observer.h  main.cpp
